Bug 155663 - FILEOPEN RTF Image crop not imported
Summary: FILEOPEN RTF Image crop not imported
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.8.0 target:24.2.2 target:7.6.6
Keywords:
Depends on:
Blocks: RTF-Images
  Show dependency treegraph
 
Reported: 2023-06-03 11:11 UTC by Gabor Kelemen (Collabora)
Modified: 2024-02-19 10:40 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2016 (1021.96 KB, application/msword)
2023-06-03 11:11 UTC, Gabor Kelemen (Collabora)
Details
Crop settings and results in Word and Writer (118.39 KB, image/png)
2023-06-03 11:11 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-06-03 11:11:05 UTC
Created attachment 187693 [details]
Example file from Word 2016

Attached Word-made file contains a cropped image.
This is not imported in Writer, the crop settings are lost.

1. Open attached file
2. Compare crop settings to Word
-> image is uncropped

Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 70fd835b4cf75e386ee115c705241a4059fb68a8
CPU threads: 15; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded

and way back to 3.5 - this was never good.
Comment 1 Gabor Kelemen (Collabora) 2023-06-03 11:11:37 UTC
Created attachment 187694 [details]
Crop settings and results in Word and Writer
Comment 2 Dieter 2023-06-17 11:37:59 UTC
I confirm it with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 069c7dc4e9706b40ca12d83d83f90f41cec948f8
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded
Comment 3 Commit Notification 2024-02-13 16:07:26 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/47f50af3f057bac1739b7d17d781c0b1d05faa95

tdf#155663 writerfilter: RTF import: don't lose \piccrop*

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl 2024-02-13 16:08:16 UTC
fixed on master
Comment 5 Commit Notification 2024-02-15 17:27:52 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/7e7b0230aa56e38f03d3d2563568a4cd2a5a6bb6

tdf#155663 writerfilter: RTF import: don't lose \piccrop*

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-02-19 10:40:47 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/5bce41f82a487c12f11ecad37cad02c93a14c1cb

tdf#155663 writerfilter: RTF import: don't lose \piccrop*

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.