tdf#155663 writerfilter: RTF import: don't lose \piccrop*

For DOCX the a:srcRect is imported in oox module in BlipFillContext and
set on the XShape; obviously that doesn't work for RTF.

The crop was already taken into account in
RTFDocumentImpl::resolvePict(), but only to set the size of the picture;
to actually set a crop effect, set shape's "GraphicsCrop" property
in dmapper::GraphicImport::lcl_attribute().

Change-Id: Ib12853724744542a09b0073fefc42ad32bb2ff19
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163310
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 47f50af3f057bac1739b7d17d781c0b1d05faa95)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163331
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>